--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'androidx.navigation.safeargs' // Esto se agrego
+
 }
 
 android {
@@ -50,5 +52,8 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation("io.coil-kt:coil:2.2.2")
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
 
 }
